--- a/src/assets/css/Content.css
+++ b/src/assets/css/Content.css
@@ -5,11 +5,17 @@
 
 body {
 
+    height: 100%;
     background-color: #FB6B6B;
     font-family: 'Recursive', sans-serif;
     font-family: 'Righteous', cursive;
+
 }
     
+span {
+    font-size: 30px;
+}
+
 img.content{
     width: 52px;
     height: 60px;
@@ -40,6 +46,18 @@ h3 {
     color: #FFFFFF;
 }
 
+h4 {
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+
+color: #333333;
+}
+
 ion-icon {
     font-size: 32px;
 }
@@ -51,12 +69,13 @@ ion-icon {
 
 .centralizada.content{
     width: 100%;
-    height:100vh;
+    height:100%;;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    padding-bottom: 46px;
+    padding-bottom: 116px;
+    position: relative;
+    
 
 }
 
@@ -141,3 +160,74 @@ ion-icon {
     background-color: #2FBE34;
 }
 
+.Footer {
+    width: 100%;
+    height: 70px;
+
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background: #FFFFFF;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+p {
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+
+    color: #333333;
+}
+
+ion-icon[name="close-circle"] {
+    font-size: 26px;
+    color: red;
+}
+
+ion-icon[name="help-circle"] {
+    font-size: 26px;
+    color: #FF922E;
+}
+
+ion-icon[name="checkmark-circle"] {
+    font-size: 26px;
+    color: #2FBE34;
+}
+
+.Invisible{
+    display:  none !important;;
+}
+
+.finalMensage{
+    width: 100%;
+    height: 100px;
+    padding: 26px 0 0 0;
+
+    position: fixed;
+    bottom: 70px;
+    left: 0;
+    background: #FFFFFF;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+.simple-Flex {
+    display: flex;
+    align-items: center;
+    margin-bottom: 14px;
+}
